# projects

./: PLANNING.md  README.md  example_config.toml  pyproject.toml
src/: notes.py  p.py  proj.py  projects.py  resources.py  tmm_proj.py
src/data/: project.py
src/plugins/time/: watson-bulk-example.py
src/projects/: __init__.py
src/subcommands/: container.py  note.py  project.py  resource.py  task.py  time.py
src/subcommands/plugins/note/: markdown.py  plain_text.py
