[tool.poetry.scripts]
p = "proj:app"

[tool.poetry]
name = "projects"
version = "0.0.2"
description = ""
authors = ["Tom Moyer <tommoyer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
tomli = "^2.0.1"
typer = {extras = ["all"], version = "^0.9.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
