[tool.poetry.scripts]
p = "tmm_proj:app"

[tool.poetry]
name = "tmm-proj"
version = "0.0.2"
description = ""
authors = ["Tom Moyer <tommoyer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
tomli = "^2.0.1"
typer = {extras = ["all"], version = "^0.9.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
